<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_CutterParameters" Id="{3f96372b-0bd7-4686-9f29-ac9b29255de7}">
    <Declaration><![CDATA[TYPE ST_CutterParameters :
STRUCT
	retractPosition	: LREAL; // := 10;
	cutVelocity	: LREAL; // := 20;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>